test/TestSuite/Syntax/Errors/sort_direction.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
  start 2007-08-19
}

taskreport report "report.html" {
# MARK: error 9 sort_direction
	sorttasks plan.start.foo
}

